--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
           <a href="https://github.com/jbstoker/Plexus/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/jbstoker/Plexus/tarball/master" class="tgz"><em>download</em> .TGZ</a>
         </span>
       </section>
+      <section id="downloads">
+        <span class="inner">
+          <a href="https://github.com/jbstoker/Plexus/zipball/master-electron" class="zip"><em>download electron.js version</em> .ZIP</a><a href="https://github.com/jbstoker/Plexus/tarball/master-electron" class="tgz"><em>download electron.js version</em> .TGZ</a>
+        </span>
+      </section>
 
 
       <span class="banner-fix"></span>
