start wiki pages plexus

--- a/acl.html
+++ b/acl.html
@@ -4,21 +4,17 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=640">
-
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/yeti/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheets/style.css">
-
     <script type="text/javascript" src="javascripts/modernizr.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
   </head>
-
   <body>
   <a id="forkme_banner" href="https://github.com/jbstoker/Plexus">View on GitHub</a>
   <div class="container">
@@ -36,7 +32,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="setup.html">Setup</a></li>
                 <li><a href="structure.html">Structure</a></li>
                 <li class="dropdown">
@@ -48,7 +44,7 @@
                   </ul>
                 </li>
                 <li><a href="navigation.html">Navigation</a></li>
-                <li><a href="acl.html">Acl</a></li>
+                <li class="active"><a href="acl.html">Acl</a></li>
                 <li><a href="demo.html">Demo Pages</a></li>
                 <li><a href="examples.html">Examples</a></li>
               </ul>
@@ -57,17 +53,24 @@
       </nav>
     </div>
     <div class="row">
-      <div class="well">
-      <h1><a id="plexus" class="anchor" href="#plexus" aria-hidden="true"><span class="octicon octicon-link"></span></a>Plexus</h1>
-      <p>Express app Boilerplate for rapid app development. This branch is the Master branch of the boilerplate. For the same boilerplate but with Electron.js intergration use the <a href="https://github.com/jbstoker/Plexus/tree/master_electron" title="Electron Intergration">Electron Branche</a></p>
-      </div>
-      <blockquote>
-        <p>Warning this is an project created for our own fun and learning curve. You are free to fork or pull one of the plexus branches, but we won't do bugfixes of any kind. Also we won't awnser to an feature request of sorts.</p>
-      </blockquote>
-      <span class="downloads">
-        <a href="https://github.com/jbstoker/Plexus/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/jbstoker/Plexus/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-      </span>
+    <!-- Main content page -->
+    <div class="col-md-3" id="myScrollspy">
+            <ul class="nav nav-tabs nav-stacked" data-offset-top="120" data-spy="affix">
+                <li class="active"><a href="#section1">Section One</a></li>
+                <li><a href="#section2">Section Two</a></li>
+            </ul>
     </div>
+    <div class="col-md-9">
+    	<div id="section1">
+				<h2>Section One</h2>
+				<p>.....</p>
+		</div>
+		<div id="section2">
+				<h2>Section Two</h2>
+				<p>.....</p>
+		</div>		
+    </div>
+</div>
       <footer>
             <p>This project by <a href="https://github.com/jbstoker">JB Stoker</a> can be found on <a href="https://github.com/jbstoker/Plexus">GitHub</a><span class="octocat"></span></p> 
       </footer>
