--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+    <script type="text/javascript" src="javascripts/main.js"></script>
   </head>
 
   <body>
-  <a id="forkme_banner" href="https://github.com/jbstoker/Plexus">View on GitHub</a>
   <div class="container">
     <div class="row">
-      <nav class="navbar navbar-inverse">
+      <nav class="navbar navbar-inverse" id="nav-header">
+        <a id="forkme_banner" href="https://github.com/jbstoker/Plexus">View on GitHub</a>
           <div class="container-fluid">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -56,21 +57,26 @@
           </div><!--/.container-fluid -->
       </nav>
     </div>
-    <div class="row">
-      <div class="well">
+    <div class="row" id="main-content">
+    <div class="col-md-12  jumbotron">
       <h1><a id="plexus" class="anchor" href="#plexus" aria-hidden="true"><span class="octicon octicon-link"></span></a>Plexus</h1>
       <p>Express app Boilerplate for rapid app development. This branch is the Master branch of the boilerplate. For the same boilerplate but with Electron.js intergration use the <a href="https://github.com/jbstoker/Plexus/tree/master_electron" title="Electron Intergration">Electron Branche</a></p>
-      </div>
       <blockquote>
         <p>Warning this is an project created for our own fun and learning curve. You are free to fork or pull one of the plexus branches, but we won't do bugfixes of any kind. Also we won't awnser to an feature request of sorts.</p>
       </blockquote>
-      <span class="downloads">
-        <a href="https://github.com/jbstoker/Plexus/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/jbstoker/Plexus/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-      </span>
     </div>
-      <footer>
-            <p>This project by <a href="https://github.com/jbstoker">JB Stoker</a> can be found on <a href="https://github.com/jbstoker/Plexus">GitHub</a><span class="octocat"></span></p> 
-      </footer>
+      <div class="downloads row">
+        <div class="col-md-6">
+        <a href="https://github.com/jbstoker/Plexus/zipball/master" class="zip"><em>download</em> .ZIP</a>
+        </div>  
+        <div class="col-md-6">
+        <a href="https://github.com/jbstoker/Plexus/tarball/master" class="tgz"><em>download</em> .TGZ</a>  
+        </div>  
+      </div>
+    </div>
+      <footer id="footer">
+            <p>This project by <a href="https://github.com/jbstoker">Plexus Team</a> can be found on <a href="https://github.com/jbstoker/Plexus">GitHub</a><span class="octocat"></span></p> 
+      </footer>  
   </div>
   </body>
 </html>
