--- a/setup.html
+++ b/setup.html
@@ -4,22 +4,27 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=640">
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/yeti/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheets/style.css">
+
     <script type="text/javascript" src="javascripts/modernizr.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+    <script type="text/javascript" src="javascripts/main.js"></script>
   </head>
+
   <body>
-  <a id="forkme_banner" href="https://github.com/jbstoker/Plexus">View on GitHub</a>
   <div class="container">
     <div class="row">
-      <nav class="navbar navbar-inverse">
+      <nav class="navbar navbar-inverse" id="nav-header">
+        <a id="forkme_banner" href="https://github.com/jbstoker/Plexus">View on GitHub</a>
           <div class="container-fluid">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -32,7 +37,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="setup.html">Setup</a></li>
                 <li><a href="structure.html">Structure</a></li>
                 <li class="dropdown">
@@ -52,28 +57,27 @@
           </div><!--/.container-fluid -->
       </nav>
     </div>
-    <div class="row">
-    <!-- Main content page -->
-        <div class="col-md-3" id="myScrollspy">
+    <div class="row" id="main-content">
+    <div class="col-md-3" id="myScrollspy">
+          <!-- sections menu -->
             <ul class="nav nav-tabs nav-stacked" data-offset-top="120" data-spy="affix">
                 <li class="active"><a href="#section1">Section One</a></li>
                 <li><a href="#section2">Section Two</a></li>
             </ul>
     </div>
     <div class="col-md-9">
-    	<div id="section1">
-				<h2>Section One</h2>
-				<p>.....</p>
-		</div>
-		<div id="section2">
-				<h2>Section Two</h2>
-				<p>.....</p>
-		</div>		
+      <!-- Main content sections -->
+    <div id="section1">
+      ............
+    </div>
+    <div id="section2">
+    ................
     </div>
     </div>
-       <footer>
-            <p>This project by <a href="https://github.com/jbstoker">JB Stoker</a> can be found on <a href="https://github.com/jbstoker/Plexus">GitHub</a><span class="octocat"></span></p> 
-      </footer>
-    </div>
+   </div>
+      <footer id="footer">
+            <p>This project by <a href="https://github.com/jbstoker">Plexus Team</a> can be found on <a href="https://github.com/jbstoker/Plexus">GitHub</a><span class="octocat"></span></p> 
+      </footer>  
+  </div>
   </body>
 </html>
