--- a/acl.html
+++ b/acl.html
@@ -37,7 +37,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="setup.html">Setup</a></li>
                 <li><a href="structure.html">Structure</a></li>
                 <li class="dropdown">
